<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_create_sales_order"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.uhurulabs.aglsalesorder.createSalesOrder">

    <TextView
        android:text="Product"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        tools:text="Product"
        android:textAppearance="@style/TextAppearance.AppCompat"
        android:textStyle="normal|bold"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@+id/radioProduct" />

    <RadioGroup
        android:id="@+id/radioProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:focusable="true"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/radio_cloves"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cloves" />

        <RadioButton
            android:id="@+id/radio_green_mung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_green_mung" />

        <RadioButton
            android:id="@+id/radio_ground_nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_ground_nuts" />

        <RadioButton
            android:id="@+id/radio_pigeon_peas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_pigeon_peas" />

        <RadioButton
            android:id="@+id/radio_kidney_beans"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_kidney_beans" />

        <RadioButton
            android:id="@+id/radio_rice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_rice" />

        <RadioButton
            android:id="@+id/radio_cotton_bales"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cotton_bales" />

        <RadioButton
            android:id="@+id/radio_sesame"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_sesame" />

        <RadioButton
            android:id="@+id/radio_yellow_gram"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_yellow_gram" />

        <RadioButton
            android:id="@+id/radio_cashew_nuts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radio_cashew_nuts"
            android:focusableInTouchMode="true"
            android:checked="true" />
    </RadioGroup>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_dialog_email"
        android:id="@+id/floatingActionButton"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:elevation="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>
